--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "acmecloud",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
   "dependencies": {
-    "preline": "^2.1.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "nuxt": "^3.11.2",
+    "preline": "^2.1.0",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
   }
 }
